# clx-ultracode

./: DESIGN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.grok-briefs/: ci-doctor-probe-skip.md  fix-live-audit-0619.md  p2-doctor-cli-cleanup.md  p2b-doctor-honest-summary.md  perf-0619.md
commands/: cluxion-consensus.md  clx-consensus.md  ultracode-doctor.md
skills/clx-ultracode/: SKILL.md
skills/ultracode/: SKILL.md
src/cluxion_effort_ultracode/: __init__.py  cli.py  llm_factory.py  plugin.py
src/cluxion_effort_ultracode/adapters/: __init__.py  callable_llm.py  codex_llm.py  hermes_llm.py  subprocess_common.py
src/cluxion_effort_ultracode/core/: __init__.py  consensus.py  errors.py  journal.py  journal_lifecycle.py  journal_records.py  ports.py  types.py
src/cluxion_effort_ultracode/doctor/: __init__.py  catalog.json  framework.py  probes.py
tests/: conftest.py  mp_helpers.py  test_cli.py  test_codex_llm.py  test_codex_strict_schema.py  test_consensus.py  test_consensus_resilience.py  test_doctor.py  test_hermes_llm.py  test_journal.py  test_llm_factory.py  test_packaging_policy.py  test_plugin.py
